# FastViewer

./: .env  .env.example  issues.md  package-lock.json  package.json  refactoring.md  test-animation-scene.json
.github/workflows/: build-windows.yml
public/scenes/: test-animation-num.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  image_loader.rs  lib.rs  main.rs  scene.rs
src/features/image-viewer/: types.ts
src/features/image-viewer/components/: ImageDisplay.tsx  ImageInfo.tsx  SceneNavigation.tsx
src/features/image-viewer/hooks/: useImageContent.ts
src/features/image-viewer/services/: imageService.ts
src/framework/: types.ts
src/framework/components/: AutoPlayControls.css  AutoPlayControls.tsx  LoopControl.css  LoopControl.tsx  NavigationButtons.tsx  Notification.css  Notification.tsx
src/framework/hooks/: useAutoPlay.ts  useDisplayLevel.ts  useKeyboard.ts  useNotification.ts
test-scenes/my-photos/: scene_1.json  scene_2.json
