[package]
name = "fastviewer"
version = "0.1.0"
description = "FastViewer - High-performance Image Slide Viewer"
authors = ["koach-noir"]
edition = "2021"

[lib]
name = "fastviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"